--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+@font-face{
+    font-family: Ubuntu;
+    font-weight: 400;
+    src: url(../fonts/Ubuntu/Ubuntu-Regular.ttf);
+}
+
+*{
+    font-family: Ubuntu;
+}
+
+.overflowHidden{
+    overflow: hidden;
+}
+
+.visible{
+    display: block !important;
+}
+
 body{
     margin: 0;
     margin: auto;
@@ -7,6 +25,12 @@ body{
     width: 1230px;
     margin: auto;
 }
+.headerWrapper{
+    position: sticky;
+    top: 0.1px;
+    background-color: #fff;
+}
+
 .header{
     display: flex;
     align-items: center;
@@ -14,10 +38,11 @@ body{
 }
 .navbar{
     display: flex;
-}
+} 
 .navbar p{
     margin-right: 40px;
 }
+
 .contacts{
     display: flex;
 }
@@ -28,40 +53,333 @@ body{
 .contactsInfo{
     margin-left: 12px;
 }
+.contactsInfo p{
+    margin: 0;
+}
+.mobileMenu{
+    display: none;
+}
+.mobileMenuOpened{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+    left: 0;
+    top: 0; 
+}
+
+.mobileMenuHeader{
+    padding: 8px 0;
+    display: flex;
+    justify-content: flex-end;
+}
+.mobileMenuItems{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
 .hero{
-    /*height: 100vh; */
     height: 100vh;
     width: 100%;
     background: url(assets/bg-image.png);
     background-repeat: no-repeat;
-    background-position-x: center;
     background-size: cover;
+}
+.Container{
+    padding: 100px;
+}
+
+.values{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: lightgray;
+    padding-bottom: 120px;
+    padding-top: 180px;
+}
+
+.icon-boxes{
+    display: flex;
+    align-items: center;
+}
+
+.ic-like{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 70px;
+}
+
+.ic-hand{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 70px;
+}
+
+.ic-slippers{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 70px;
 }
 
 .formTitle{
     font-weight: bold;
     font-size: 28px;
+    color: #1E212C;
+    width: 520px;
+    height: 42px;
+}
+
+.formWrapper{
+    width: 100%;
+    padding-top: 120px;
+    background: linear-gradient (grey 80% lightgray 80%);
 }
 
 .form{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid;
-    padding: 40px;
+    padding: 48px 60px;
+    background-color: white;
+    height: 200px;
+    border-radius: 4px;
 }
 
 .formData{
     display: flex;
     justify-content: space-between;
     width: 100%;
+    align-items: center;
 }
 
 .formInput{
     display: flex;
     flex-direction: column;
+    height: 44px;
+    color: #424551;
+    font-size: 14px;
+    width: 260px;
+    height: 73px;
 }
 
 .formInput input{
     padding: 12px 16px;
+    background-color: #F4F5F6;
+    border-radius: 4px;
+    border: 1px solid;
+    border-color: #D7DADD;
+}
+.formInput label{
+    padding: 10px 0;
+}
+
+.formBtn{
+    padding: 0px 32px;
+    font-size: 14px;
+    background-color: #FF5A30;
+    border-radius: 4px;
+    border: none;
+    width: 104px;
+    height: 44px;
+    color: white;
+    margin-top: 38px;
+}
+
+.services{
+    padding-top: 120px;
+    padding-bottom: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: lightgray;
+}
+
+.servicesTitle{
+    font-size: 46px;
+    font-weight: bold;
+    margin: 0;
+    margin-bottom: 24px;
+}
+
+.servicesSubtitle{
+    font-size: 18px;
+    color: #787A80;
+    margin: 0;
+    margin-bottom: 60px;
+}
+
+.servicesItems{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    border-radius: 4px;
+}
+
+.servicesItem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid;
+    border-color: #E5E8ED;
+    border-radius: 4px;
+    width: 285px;
+    height: 285px;
+    background-color: white;
+    transition: background-color 1s ease;
+    font-size: 20px;
+}
+
+.servicesItem:hover{
+    background-image: url(assets/image.jpg);
+    transition: background-image 1s ease;
+}
+
+.servicesMore{
+    display: flex;
+    gap: 40px;
+    margin-top: 60px;
+    font-size: 28px;
+    font-weight: bold;
+    align-items: center;
+}
+.servicesBtn{
+    padding: 20px 40px;
+    height: 62px;
+    font-size: 18px;
+    background-color: #FF5A30;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.5s ease;
+}
+
+.servicesBtn:hover{
+    background-color: yellowgreen;
+    transition: background-color 0.5s ease;
+}
+
+.servicesBtn:active{
+    background-color: yellow;
+}
+
+@media (max-width: 750px) {
+    .container{
+        padding: 0 15px;
+        width: unset;
+    }
+    .navbar{
+        display: none;
+    }
+    .contacts{
+        display: none;
+    }
+    .formData{
+        flex-direction: column;
+    }
+    .servicesItems{
+        flex-direction: column;
+    }
+    .headerWrapper{
+        padding: 8px 0;
+    }
+    .mobileMenu{
+        display: block;
+    }
+}
+
+.portfolio{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid;
+    background-color: lightgray;
+    color: #1E212C;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    width: 1240px;
+    height: 750px;
+}
+
+.portfolioTitle{
+    width: 705px;
+    height: 120px;
+    font-size: 46px;
+}
+
+.portfolioCards{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.portfolioCard{
+    padding: 0 12px;
+    width: 390px;
+    height: 440px;
+}
+
+.portfolioBtnCard{
+    display: block;
+    padding: 0 24px;
+    margin: 20px 80px;
+    height: 44px;
+    gap: 10px;
+    border: 1px solid;
+    border-radius: 4px;
+    border-color: #FF5A30;
+    color: #FF5A30;
+    background-color: white;
+    cursor: pointer;
+}
+
+.projectName{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.projectName p{
+    font-size: 14px;
+    height: 21px;
+    color: #787A80;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.portfolioMore{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    font-size: 28px;
+    font-weight: bold;
+    gap: 40px;
+    height: 52px;
+    color: #1E212C;
+}
+.portfolioBtn{
+    display: block;
+    padding: 0 40px;
+    font-size: 16px;
+    background-color: #FF5A30;
+    color: white;
+    gap: 10px;
+    height: 52px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.5s ease;
+}
+
+.portfolioCard:hover{
+    transition: 0.5s ease;
+    background-color: white;
+    height: 500px
 }
