--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body{
     align-items: center;
     justify-content: space-between;
 }
+
 .navbar{
     display: flex;
 } 
@@ -63,7 +64,6 @@ body{
     display: none;
     position: absolute;
     width: 100%;
-    height: 100vh;
     background-color: #fff;
     left: 0;
     top: 0; 
@@ -74,10 +74,10 @@ body{
     display: flex;
     justify-content: flex-end;
 }
-.mobileMenuItems{
+.mobileMenuItem{
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
     font-size: 24px;
     margin-bottom: 20px;
 }
@@ -280,7 +280,7 @@ body{
     background-color: yellow;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 760px) {
     .container{
         padding: 0 15px;
         width: unset;
@@ -466,4 +466,79 @@ body{
     align-items: center;
     margin-left: 1400px;
     margin-block-start: -390px;
+}
+
+@media (max-width: 1050px) {
+    .container {
+      padding: 0 15px;
+      width: unset;
+    }
+    .navbar {
+      display: none;
+    }
+    .contacts {
+      display: none;
+    }
+    .formData {
+      flex-direction: column;
+    }
+    .servicesItems {
+      flex-direction: column;
+    }
+    .headerWrapper {
+      padding: 8px 0;
+    }
+    .mobileMenu {
+      display: block;
+    }
+  }
+
+  @media (max-width: 651px) {
+    .container {
+      padding: 0 15px;
+      width: unset;
+    }
+    .navbar {
+      display: none;
+    }
+    .contacts {
+      display: none;
+    }
+    .formData {
+      flex-direction: column;
+    }
+    .servicesItems {
+      flex-direction: column;
+    }
+    .headerWrapper {
+      padding: 8px 0;
+    }
+    .mobileMenu {
+      display: block;
+    }
+  }
+
+  @media (max-width: 1500px) {
+    .container {
+      padding: 0 15px;
+      width: unset;
+    }
+    /* .navbar {
+      display: none;
+    } */
+    .contacts {
+      display: none;
+    }
+    /* .formData {
+      flex-direction: column;
+    } */
+    /* .servicesItems {
+      flex-direction: column;
+    } */
+    .headerWrapper {
+      padding: 8px 0;
+    }
+    .mobileMenu {
+      display: none;
+    }
 }
